# llvm-project

.github/workflows/: build-publish-py-ir2vec-wheel.yml  build-py-ir2vec-wheel.yml  build-py-mir2vec-wheel.yml
llvm/docs/: MLGO.rst
llvm/include/llvm/Analysis/: IR2Vec.h
llvm/lib/Analysis/: IR2Vec.cpp
llvm/lib/CodeGen/: MIR2Vec.cpp
llvm/tools/llvm-ir2vec/: CMakeLists.txt  IR2VecTool.cpp  IR2VecTool.h  llvm-ir2vec.cpp
llvm/tools/llvm-ir2vec/bindings/: CMakeLists.txt  build_llvm.sh  build_wheel.sh  ir2vec_bindings.cpp  manifest.in  pyproject.toml
llvm/tools/llvm-ir2vec/bindings/IR2Vec/: CMakeLists.txt  __init__.py  build_llvm.sh  build_wheel.sh  ir2vec_bindings.cpp  pyproject.toml  setup.py
llvm/tools/llvm-ir2vec/bindings/MIR2Vec/: CMakeLists.txt  __init__.py  build_llvm.sh  build_wheel.sh  manifest.in  mir2vec_bindings.cpp  pyproject.toml
llvm/utils/mlgo-utils/: CMakeLists.txt
