[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-mir2vec"
version = "0.1.2"
description = "Python bindings for LLVM MIR"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.19.0",
]

[tool.setuptools]
packages = ["py_mir2vec"]

[tool.setuptools.package-data]
py_mir2vec = ["*.so"]